--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "react-slick": "^0.30.2",
     "zod": "^3.23.8"
   }
 }
