--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
