--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon api/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
     "start": "nodemon index.js"
   },
   "keywords": [],
