--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7",
     "react-slick": "^0.30.2",
     "zod": "^3.23.8"
   }
